--- a/Contents/Services/ServiceInfo.plist
+++ b/Contents/Services/ServiceInfo.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Search</key>
+	<dict>
+		<key>DR DK</key>
+		<dict>
+			<key>Identifier</key>
+			<string>com.plexapp.plugins.drdk</string>
+		</dict>
+	</dict>
 	<key>URL</key>
 	<dict>
 		<key>drdk live</key>
