Remove debug; make URL Patterns regex more specific.

--- a/Contents/Services/ServiceInfo.plist
+++ b/Contents/Services/ServiceInfo.plist
@@ -16,7 +16,7 @@
 		<dict>
 			<key>URLPatterns</key>
 			<array>
-				<string>(.+)dr.dk/tv/live/(.+)</string>
+				<string>^http://(.+\.)?dr.dk/tv/live/.+</string>
 			</array>
 		</dict>
 	</dict>
